src/test/deca/context/valid/tests/117_classeCast.deca
// Description:
//    Programme minimaliste: une classe et des Cast dans le Main.
//
// Historique:
//    cree le 01/01/2022

class A {
}

class B extends A {
}

{
	A a = new A();
	B b = (B)(a);
	A c = (A)(b);
}
